<resources>
    <string name="app_name">TMA Post</string>
    <string name="enter_passphrase">Enter Passphrase</string>
    <string name="confirm_passphrase">Confirm Passphrase</string>
    <string name="connected">You successfully connected to TMA Network</string>
    <string name="address_label">Your TMA Address</string>
    <string name="balance_label">Your Balance</string>
    <string name="coins">coins</string>
    <string name="file_menu">File</string>
    <string name="tools_menu">Tools</string>
    <string name="messaging_menu">Messaging</string>
    <string name="twitter_menu">Tmitter</string>
    <string name="posting_menu">Posting</string>
    <string name="stop_message_listener">Stop message listener</string>
    <string name="show_address">Show Address</string>

    <string name="show_messages">Show Messages</string>
    <string name="create_twitter">Create Tmitter</string>
    <string name="show_my_tweets">Show My Tmeets</string>
    <string name="search_twitter">Search Tmitter</string>
    <string name="my_subscription">My Subscription</string>
    <string name="create_post">Create Post</string>
    <string name="find_post">Find Post</string>
    <string name="my_ratings">My Ratings</string>
    <string name="my_posts">My Posts</string>
    <string name="connecting_wait">Connecting to TMA Network, please wait.</string>
    <string name="get_balance_wait">Retrieving balance. Please wait.</string>
    <string name="retrieving_messages_wait">Retrieving messages. Please wait.</string>
    <string name="fail_retrieve_messages">Failed to retrieve messages. Please try again.</string>

    <string name="tma_address">TMA Address</string>
    <string name="balance">Balance</string>
    <string name="wrong_password">Entered passphrase was not correct. Please try again.</string>
    <string name="reentered_password_does_not_match">New and reentered passphrase do not match. Please try again.</string>
    <string name="Recipient_TMA_Address">Recipient TMA Address</string>
    <string name="Amount_in_coins">Amount in coins</string>
    <string name="Fee_in_satoshis">Fee in satoshis</string>
    <string name="data">Data</string>
    <string name="Expire_after_blocks">Expire after # blocks</string>
    <string name="Expiring_Data">Expiring Data</string>
    <string name="wait">Please wait.</string>
    <string name="entered_info_not_correct">Entered information was not correct. Please try again.</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="expire_prompt">Select expire duration</string>
    <string name="re">Re:</string>
    <string name="locate_file">Locate file</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="reenter_new">Reenter New</string>
    <string name="passphrase_was_successfully_updated">Passphrase was successfully updated</string>
    <string name="value">Value</string>
    <string name="sender">Sender</string>
    <string name="recipient">Recipient</string>
    <string name="fee">Fee</string>
    <string name="date">Date</string>
    <string name="expire">Expire</string>
    <string name="reply">Reply</string>
    <string name="result">result</string>
    <string name="import_file">Import File</string>
    <string name="export_file">Export File</string>
    <string name="select_file_to_import">Select File to Import?</string>
    <string name="select_file">Select File</string>
    <string name="file_copied_to">File copied to</string>
    <string name="parent_directory_created">Parent directory created</string>
    <string name="file_successfully_imported">File successfully imported</string>
    <string name="view_log">View Log</string>
    <string name="name">Name</string>
    <string name="address_was_added">Address was added/edited successfully.</string>
    <string name="address_was_deleted">Address was deleted successfully.</string>
    <string name="name_already_exists">This name already exists. Please select a different name.</string>
    <string name="name_cannot_be_blank">Name cannot be blank</string>
    <string name="add_to_address_book">Add/Edit Address</string>
    <string name="delete_address">Delete Address</string>
    <string name="network_status">Network status</string>
    <string name="copy_cancelled">Copying file was canceled</string>
    <string name="file_does_not_exist">File does not exists:</string>
    <string name="key_file">Key File</string>
    <string name="existing_key_file">Do you want to use an existing key file</string>
    <string name="no_load_key_file">Could not load keys</string>
    <string name="no_inputs">No inputs available for tma address</string>
    <string name="pls_check_your_balance">. Please check your balance.</string>
    <string name="success_sent">Successfully sent</string>
    <string name="coins_to">coins to</string>
    <string name="fail_retrieve_balance">Failed to retrieve balance. Please try again.</string>


    <!-- BUTTONS -->
    <string name="down_load_file_button">Locate File</string>
    <string name="change_password">Change Password</string>
    <string name="get_balance">Get Any Balance</string>
    <string name="submit">Submit</string>
    <string name="send_transaction">Send Coins</string>
    <string name="send_secure_message">Send Secure Message</string>
    <string name="send_tweet">Send Tmeet</string>


    <string-array name="expire_arrays">
        <item>10 minutes</item>
        <item>1 hour</item>
        <item>24 hours</item>
        <item>1 week</item>
        <item>1 month</item>
        <item>1 year</item>
    </string-array>

    <string name="successfully_sent_message">Successfully sent message</string>
    <string name="to">to</string>
    <string name="secure_message_received">Secure Message Received</string>
    <string name="new_messages_listener">New messages listener</string>
    <string name="show_peers">Show Peers</string>
    <string name="no_config_dir">Possible no config directory</string>
    <string name="no_files_in_config_dir">No files in config directory</string>
    <string name="file_success_exported">File successfully exported</string>
    <string name="date_modified">Date modified</string>
    <string name="size">Size</string>
    <string name="delete">Delete</string>

    <string name="account_name">Account Name</string>
    <string name="description">Description</string>
    <string name="enter_passphrase_tmitter">Enter Passphrase</string>
    <string name="create_tmitter_account">Create Tmitter Account</string>
    <string name="account_cannot_be_empty">Account cannot be empty</string>
    <string name="description_cannot_be_empty">Description cannot be empty</string>
    <string name="tmitter_account_created">Tmitter account was successfully created</string>
    <string name="tmitter_account_created_account_name_is">Tmitter account was already created. Account name is</string>
    <string name="with_tma_address">with tma address</string>
    <string name="search_tmitter_accounts">Search Tmitter Accounts</string>
    <string name="send_tmeet">Send Tmeet</string>
    <string name="enter_tmeet">Enter Tmeet</string>
    <string name="post">Post</string>
    <string name="keywords">Keywords</string>
    <string name="post_cannot_be_empty">Post cannot be empty</string>
    <string name="keywords_cannot_be_empty">Keywords cannot be empty</string>
    <string name="post_was_sent">Post was sent</string>

    <string name="tweet_was_sent_successfully">Tweet was sent successfully</string>
    <string name="tmitter_account_create">Please create your tmitter account first.</string>
    <string name="enter_tmitter_account">Enter Tmitter Account</string>
    <string name="replyBack">Back</string>
    <string name="enter_reply">Enter Reply</string>
    <string name="send_reply">Send Reply</string>
    <string name="Back">Back</string>
    <string name="post_and_keywords_cannot_be_empty">Both Post and Keywords cannot be empty</string>
    <string name="tmitter_wait">Please wait ... This can take a while.</string>

    <string name="get_my_balance">Get My Balance</string>
    <string name="number_of_accounts_found">Number of accounts found</string>
    <string name="number_of_subscription_found">Number of subscription(s) found</string>
    <string name="created_on">Created On</string>

    <string name="identifier">Identifier</string>
    <string name="comment">Comment</string>
    <string name="approve">Approve</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="add_rating">Add Rating</string>
    <string name="total_rating_is">Total rating is</string>
    <string name="failed_to_retrieve_ratings">Failed to retrieve ratings. Please try again</string>
    <string name="total_number_of_comments_found_for">Total number of comments found for</string>
    <string name="comment_cannot_be_empty">Comment cannot be empty</string>
    <string name="please_choose_rating">Please choose rating</string>
    <string name="could_not_retrieve_any_keywords_for">Could not retrieve any keywords for</string>
    <string name="please_check_your_balance">Please check your balance.</string>
    <string name="no_inputs_available_for_tma_address">No inputs available for tma address</string>
    <string name="rate">Rate</string>
    <string name="rater">Rater</string>

    <string name="negative">Negative</string>
    <string name="positive">Positive</string>
    <string name="failed_to_retrieve_ratee">Failed to retrieve ratee. Please try again</string>

    <string name="post_cannot_be_longer">Post title cannot be longer than 64 characters</string>
    <string name="no_posts">No Posts</string>
    <string name="no_ratings">No Ratings</string>
    <string name="no_results">No Results</string>
    <string name="no_posts_were_found_for_provided_keywords">No posts were found for provided keywords.</string>

    <string name="show_transactions">Show Transactions</string>
    <string name="create_new_passphrase">Create New Passphrase</string>
    <string name="reenter_new_passphrase">Reenter New Passphrase</string>


</resources>
