<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
>

    <TextView
        android:id="@+id/header_fileName"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorPrimaryDark">
    </TextView>
    <TextView
        android:id="@+id/header_dateModified"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/date_modified"
        android:textSize="16sp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark">
    </TextView>
    <TextView
        android:id="@+id/header_size"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/size"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:layout_marginLeft="15dp"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark">
    </TextView>


</LinearLayout>